# sldc-abi-training-project

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  metrics.md  pyproject.toml  streamlit_app.py
scripts/: download_data.py  train_iris.py
src/iris_api/: __init__.py  app.py
tests/: test_app.py  test_streamlit_app.py
