[project]
name = "fastapi-ml-iris-classifier"
version = "0.1.0"
description = "FastAPI + Iris Classifier with Streamlit UI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "requests>=2.31",
  "streamlit>=1.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
